deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyclaim-frontend
  labels:
    name: easyclaim-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      name: easyclaim-frontend
  template:
    metadata:
      name: easyclaim-frontend
      labels:
        name: easyclaim-frontend
    spec:
      containers:
        - name:  easyclaim-frontend
          image: vigneshsweekaran/easyclaim-frontend:32015
          imagePullPolicy: Always
