deployment/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyclaim-frontend
  labels:
    name: easyclaim-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: easyclaim-frontend-pod
  strategy:
    type: Recreate
  template:
    metadata:
      name: easyclaim-frontend-pod
      labels:
        name: easyclaim-frontend-pod
    spec:
      containers:
        - name:  easyclaim-frontend
          image: vigneshsweekaran/easyclaim-frontend:latest
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: easyclaim-frontend-service
  labels:
    name: easyclaim-frontend-service
spec:
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 32011
  selector:
    name: easyclaim-frontend-pod
  type: NodePort
