deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: easyclaim-frontend
  labels:
    name: easyclaim-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32011
  selector:
    name: easyclaim-frontend
  type: NodePort
